Try out z-index fix for mobile bug.

--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -116,6 +116,8 @@
     line-height: 1.4;
     margin: 0;
     padding: 1.5rem 1.5rem;
+    position: relative;
+    z-index: 50;
   }
 
   #menu-icon {
